// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-other"
    >
      Expense
    </div>
    <div
      className="show-for-other"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-other"
    >
      Expense
    </div>
    <div
      className="show-for-other"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1321}
      createdAt={0}
      description="Elli"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={10}
      createdAt={-345600000}
      description="Phillip"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={20}
      createdAt={345600000}
      description="ELLIP"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
